# planet-simulator

./: CMakeLists.txt  README.md  simulator.cpp
ball/: ball.cpp  ball.h
controller/: controller.cpp  controller.h
rect/: rect.cpp  rect.h
